--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,49 @@
   <title>Conway's Game of Life</title>
   <meta name="author" content="Laboratory One">
   <meta charset="utf-8" />
+  <meta property="og:title" content="Conway's Game of Life" />
+  <meta property="og:image" content="http://gameoflife.labone.tech/images/logo-og.jpg" />
+  <meta property="og:url" content="http://gameoflife.labone.tech" />
+  <meta property="og:site_name" content="Conway's Game of Life" />
+  <meta property="og:description" content="Meteor with React + Redux" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" content="http://gameoflife.labone.tech" />
+  <meta name="twitter:site" content="@northwest69" />
+  <meta name="twitter:title" content="Conway's Game of Life" />
+  <meta name="twitter:description" content="Meteor with React + Redux" />
+  <meta name="twitter:image" content="http://gameoflife.labone.tech/images/logo-twitter.jpg">
+  <noscript>You must have Javascript enabled in order to use this site</noscript>
+  <!--favicons-->
+  <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/images/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/images/manifest.json">
+  <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/images/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
+  <meta name="msapplication-config" content="/images/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-69008437-12', 'auto');
+    ga('send', 'pageview');
+  
+  </script>
 </head>
 
 <body>
