--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
   <meta name="author" content="Laboratory One">
   <meta charset="utf-8" />
   <meta property="og:title" content="Conway's Game of Life" />
-  <meta property="og:image" content="http://gameoflife.labone.tech/images/logo-og.png" />
+  <meta property="og:image" content="http://gameoflife.labone.tech/images/logo-og.jpg" />
   <meta property="og:url" content="http://gameoflife.labone.tech" />
   <meta property="og:site_name" content="Conway's Game of Life" />
   <meta property="og:description" content="Meteor with React + Redux" />
@@ -13,7 +13,7 @@
   <meta name="twitter:site" content="@northwest69" />
   <meta name="twitter:title" content="Conway's Game of Life" />
   <meta name="twitter:description" content="Meteor with React + Redux" />
-  <meta name="twitter:image" content="http://gameoflife.labone.tech/images/logo-twitter.png">
+  <meta name="twitter:image" content="http://gameoflife.labone.tech/images/logo-twitter.jpg">
   <noscript>You must have Javascript enabled in order to use this site</noscript>
   <!--favicons-->
   <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-touch-icon-57x57.png">
